Added js functions and local storage state

--- a/sass/_font&colors.scss
+++ b/sass/_font&colors.scss
@@ -15,6 +15,7 @@ $white: #fff;
 $list-background: #fff;
 $history-item-color: #333;
 $delete-btn: #e74c3c;
+$message-color: #9c88ff;
 
 
 // ----------------------------- Font --------------------------------// 
