--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,7 @@ $box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin: 10px 0 10px;
     padding: 10px;
     width: 100%;
+    border: none;
 
     &:focus {
         outline: 0;
@@ -67,7 +68,6 @@ $box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin-bottom: 40px;
 
     li {
-        cursor: pointer;
         background-color: $list-background;
         box-shadow: $box-shadow;
         color: $history-item-color;
@@ -89,7 +89,7 @@ $box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         .delete-btn {
             cursor: pointer;
             background-color: $delete-btn;
-            border: 0;
+            border: none;
             color: $white;
             font-size: $delete-btn-size;
             padding: 2px 1px;
@@ -142,3 +142,43 @@ form {
     }
 }
 
+// ---------------------------- Message ------------------------------//
+.message-container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    background-color: $message-color; 
+    width: 100%;
+    height: 75px;
+    color: $white;
+    transform: translate(0, -100%);
+
+    &.show {
+        animation: show 5s ease-in-out;
+    }
+
+    @keyframes show {
+        0% {
+          transform: translate(0, -100%);
+          border-radius: 0 0 50% 50%;
+          background-color: aqua;
+        }
+        10% {
+        transform: translate(0, 0);
+        border-radius: 0 0 0 0;
+        background-color: $message-color;
+        }
+        90% {
+        transform: translate(0, 0);
+        border-radius: 0 0 0 0;
+        background-color: $message-color;
+        }
+        100% {
+        transform: translate(0, -100%);
+        border-radius: 0 0 50% 50%;
+        background-color: aqua;
+        }
+      }
+}
