--- a/sass/style.css
+++ b/sass/style.css
@@ -23,6 +23,7 @@ h4 {
   margin: 10px 0 10px;
   padding: 10px;
   width: 100%;
+  border: none;
 }
 .btn:focus {
   outline: 0;
@@ -66,7 +67,6 @@ h4 {
   margin-bottom: 40px;
 }
 .list li {
-  cursor: pointer;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   color: #333;
@@ -86,7 +86,7 @@ h4 {
 .list li .delete-btn {
   cursor: pointer;
   background-color: #e74c3c;
-  border: 0;
+  border: none;
   color: #fff;
   font-size: 20px;
   padding: 2px 1px;
@@ -127,6 +127,44 @@ form input[type=number] {
   font-size: 16px;
   padding: 10px;
   width: 100%;
+}
+
+.message-container {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  background-color: #9c88ff;
+  width: 100%;
+  height: 75px;
+  color: #fff;
+  transform: translate(0, -100%);
+}
+.message-container.show {
+  animation: show 5s ease-in-out;
+}
+@keyframes show {
+  0% {
+    transform: translate(0, -100%);
+    border-radius: 0 0 50% 50%;
+    background-color: aqua;
+  }
+  10% {
+    transform: translate(0, 0);
+    border-radius: 0 0 0 0;
+    background-color: #9c88ff;
+  }
+  90% {
+    transform: translate(0, 0);
+    border-radius: 0 0 0 0;
+    background-color: #9c88ff;
+  }
+  100% {
+    transform: translate(0, -100%);
+    border-radius: 0 0 50% 50%;
+    background-color: aqua;
+  }
 }
 
 * {
