--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -22,7 +22,8 @@ $box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 // --------------------------- Container -----------------------------// 
 .container {
     margin: 30px auto;
-    width: 350px;
+    min-width: 300px;
+    max-width: 400px;
 }
 
 
