--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -26,6 +26,49 @@ $box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 400px;
 }
 
+// ----------------------- Toggle Container --------------------------//
+.toggle-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+// ---------------------------- Toggle -------------------------------//
+.toggle {
+    width: 75px;
+    height: 40px;
+    margin: 1rem;
+    border-radius: 20px;
+    border: solid 1px $container-border;
+    position: relative;
+    cursor: pointer;
+
+    &.minus {
+        background-color: $money-minus;
+    }
+
+    &.plus {
+        background-color: $money-plus;
+
+        .toggle-button {
+            transform: translate(35px, 0);
+        }
+    }
+
+    .toggle-button {
+        background-color: $white;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 4px;
+        left: 4px;
+        border-radius: 50%; 
+        box-shadow: $box-shadow;
+        cursor: pointer;
+        animation-duration: 3s;
+    }
+}
+
 
 // ------------------- Income & Expense Container --------------------// 
 .inc-exp-container {
