--- a/sass/style.css
+++ b/sass/style.css
@@ -35,6 +35,43 @@ h4 {
   max-width: 400px;
 }
 
+.toggle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggle {
+  width: 75px;
+  height: 40px;
+  margin: 1rem;
+  border-radius: 20px;
+  border: solid 1px #dedede;
+  position: relative;
+  cursor: pointer;
+}
+.toggle.minus {
+  background-color: #c0392b;
+}
+.toggle.plus {
+  background-color: #3ecc71;
+}
+.toggle.plus .toggle-button {
+  transform: translate(35px, 0);
+}
+.toggle .toggle-button {
+  background-color: #fff;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+  animation-duration: 3s;
+}
+
 .inc-exp-container {
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
